# cross

./: .gitmodules  Cargo.toml
.github/workflows/: ci.yml  weekly.yml
docker/: cmake.sh  freebsd.sh  linux-runner  qemu.sh  wine.sh  zig.sh
src/: build.rs  config.rs  errors.rs  extensions.rs  lib.rs  rustc.rs  rustup.rs  shell.rs  temp.rs  tests.rs
src/docker/: custom.rs  local.rs  remote.rs  shared.rs
src/tests/: toml.rs
xtask/: Cargo.toml
xtask/src/ci/: target_matrix.rs
